--- a/roles/drakvuf-dev/tasks/install_volatility3.yml
+++ b/roles/drakvuf-dev/tasks/install_volatility3.yml
@@ -12,3 +12,29 @@
   command: "python3 setup.py build"
   args:
     chdir: "{{ build_dir }}/volatility3/"
+
+- name: Download Windows debug symbols (PDB files)
+  get_url:
+    url: https://downloads.volatilityfoundation.org/volatility3/symbols/windows.zip
+    dest: /tmp/windows.zip
+    checksum: sha256:231d69735b9a5482b16bdbf1ec356e0a95574c44079e68dfb02ebddb34d55f3e
+    timeout: 1500
+
+- name: Extract Windows debug symbols
+  unarchive:
+    src: /tmp/windows.zip
+    dest: "{{ build_dir }}/volatility3/volatility/symbols/"
+    remote_src: yes
+
+#- name: Download Linux debug symbols
+#  get_url:
+#    url: https://downloads.volatilityfoundation.org/volatility3/symbols/linux.zip
+#    dest: /tmp/linux.zip
+#    checksum: sha256:d9d03616858c8247d62921656c1238e54daa7aa024c1b496ec624fd90c6231e2
+#    timeout: 1500
+
+#- name: Extract Linux debug symbols
+#  unarchive:
+#    src: /tmp/linux.zip
+#    dest: "{{ build_dir }}/volatility3/volatility/symbols/"
+#    remote_src: yes
