Add debug flag when calling drakvuf's .configure-command

--- a/roles/drakvuf-dev/tasks/compile_drakvuf.yml
+++ b/roles/drakvuf-dev/tasks/compile_drakvuf.yml
@@ -6,8 +6,8 @@
   become_user: "{{ drakvuf_user }}"
   become: yes
 
-- name: Configure drakvuf
-  command: "./configure"
+- name: Configure drakvuf with debugging enabled
+  command: "./configure --enable-debug"
   args:
     chdir: "{{ build_dir }}/"
   become_user: "{{ drakvuf_user }}"
