Add network bridge setup with netplan
setup_bride.yml adds a network bridge as defined in the defaults.
TODO: Make this customizable to work with Debian.

--- a/roles/drakvuf-dev/defaults/main.yml
+++ b/roles/drakvuf-dev/defaults/main.yml
@@ -1,6 +1,12 @@
 # Base vars
 distribution: focal
+# User, which uses drakvuf
 drakvuf_user: user01
+# Drakvufs directory
 build_dir: /usr/local/src/drakvuf
-iso: Win7_HomePrem_SP1_German_COEM_x32.iso
-
+# Netplan config to insert the bridge to
+netplan_file: 00-installer-config.yaml
+# NIC to bridge
+nic: eno1
+# Name of the bridge to create
+br_name: xenbr0
