Add the package zfsutils-linux for handling of ZFS volumes

--- a/roles/drakvuf-dev/tasks/prepare_base.yml
+++ b/roles/drakvuf-dev/tasks/prepare_base.yml
@@ -64,6 +64,7 @@
       - libsystemd-dev
       - nasm
       - python3-pefile
+      - zfsutils-linux # when using ZFS pool for the guests
     state: present
   become: yes
   tags:
